[package]
name = "sonic262"
version = "0.1.0"
authors = ["Ujjwal Sharma <ryzokuken@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
argh = "0.1.4"
serde_yaml = "0.8.14"
color-eyre = "0.5.7"
tempfile = "3.1.0"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "full"
harness = false
