[package]
name = "sonic262"
version = "0.1.0"
authors = ["Ujjwal Sharma <ryzokuken@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde_yaml = "0.8.13"
colored = "2.0.0"
walkdir = "2.3.1"
rayon = "1.5.0"
color-eyre = "0.5.7"
dashmap = "3.11.10"
rusty_v8 = "0.13.0"

[dev-dependencies]
criterion = "0.3"
static_assertions = "1.1.0"

[[bench]]
name = "full"
harness = false

